; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/unexpand/extr_unexpand.c_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/unexpand/extr_unexpand.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LC_CTYPE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@nstops = common dso_local global i32 0, align 4
@tabstops = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [4 x i8] c"at:\00", align 1
@all = common dso_local global i32 0, align 4
@optarg = common dso_local global i32 0, align 4
@optind = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [6 x i8] c"stdin\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@stdin = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %9 = load i32, i32* @LC_CTYPE, align 4
  %10 = call i32 @setlocale(i32 %9, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* @nstops, align 4
  %11 = load i32*, i32** @tabstops, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 8, i32* %12, align 4
  br label %13

13:                                               ; preds = %26, %2
  %14 = load i32, i32* %4, align 4
  %15 = load i8**, i8*** %5, align 8
  %16 = call i32 @getopt(i32 %14, i8** %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  store i32 %16, i32* %6, align 4
  %17 = icmp ne i32 %16, -1
  br i1 %17, label %18, label %27

18:                                               ; preds = %13
  %19 = load i32, i32* %6, align 4
  switch i32 %19, label %24 [
    i32 97, label %20
    i32 116, label %21
  ]

20:                                               ; preds = %18
  store i32 1, i32* @all, align 4
  br label %26

21:                                               ; preds = %18
  %22 = load i32, i32* @optarg, align 4
  %23 = call i32 @getstops(i32 %22)
  store i32 1, i32* @all, align 4
  br label %26

24:                                               ; preds = %18
  %25 = call i32 (...) @usage()
  br label %26

26:                                               ; preds = %24, %21, %20
  br label %13

27:                                               ; preds = %13
  %28 = load i64, i64* @optind, align 8
  %29 = load i32, i32* %4, align 4
  %30 = sext i32 %29 to i64
  %31 = sub nsw i64 %30, %28
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %4, align 4
  %33 = load i64, i64* @optind, align 8
  %34 = load i8**, i8*** %5, align 8
  %35 = getelementptr inbounds i8*, i8** %34, i64 %33
  store i8** %35, i8*** %5, align 8
  store i32 0, i32* %7, align 4
  %36 = load i32, i32* %4, align 4
  %37 = icmp eq i32 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %27
  %39 = call i32 @tabify(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %40 = load i32, i32* %7, align 4
  %41 = or i32 %40, %39
  store i32 %41, i32* %7, align 4
  br label %63

42:                                               ; preds = %27
  br label %43

43:                                               ; preds = %61, %42
  %44 = load i8**, i8*** %5, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i32 1
  store i8** %45, i8*** %5, align 8
  %46 = load i8*, i8** %44, align 8
  store i8* %46, i8** %8, align 8
  %47 = icmp ne i8* %46, null
  br i1 %47, label %48, label %62

48:                                               ; preds = %43
  %49 = load i8*, i8** %8, align 8
  %50 = load i32, i32* @stdin, align 4
  %51 = call i32* @freopen(i8* %49, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %50)
  %52 = icmp eq i32* %51, null
  br i1 %52, label %53, label %56

53:                                               ; preds = %48
  %54 = load i8*, i8** %8, align 8
  %55 = call i32 @warn(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i8* %54)
  store i32 1, i32* %7, align 4
  br label %61

56:                                               ; preds = %48
  %57 = load i8*, i8** %8, align 8
  %58 = call i32 @tabify(i8* %57)
  %59 = load i32, i32* %7, align 4
  %60 = or i32 %59, %58
  store i32 %60, i32* %7, align 4
  br label %61

61:                                               ; preds = %56, %53
  br label %43

62:                                               ; preds = %43
  br label %63

63:                                               ; preds = %62, %38
  %64 = load i32, i32* %7, align 4
  %65 = icmp ne i32 %64, 0
  %66 = zext i1 %65 to i32
  %67 = call i32 @exit(i32 %66) #3
  unreachable
}

declare dso_local i32 @setlocale(i32, i8*) #1

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @getstops(i32) #1

declare dso_local i32 @usage(...) #1

declare dso_local i32 @tabify(i8*) #1

declare dso_local i32* @freopen(i8*, i8*, i32) #1

declare dso_local i32 @warn(i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
